--- a/index.css
+++ b/index.css
@@ -52,9 +52,8 @@
 .text-box{
     position: absolute;
     transform: translate(-50%, -50%);
-    width: 100px;
-    height: 100px;
     border-radius: 50%;
+    text-align: center;
 }
 
 .footer{
