--- a/index.css
+++ b/index.css
@@ -1,3 +1,28 @@
+
+/*header*/
+
+.header{
+    text-align: center;
+    margin-top:20px;
+    margin-bottom: 20px;
+}
+
+.nav{
+    display: flex;
+    justify-content: center;
+    gap: 50px;
+}
+
+.help{
+    margin-right:100px;
+}
+
+.new-game{
+    margin-left:100px;
+}
+
+/*main pentagram*/
+
 .pentagram {
     position: relative;
     width: 300px;
@@ -9,6 +34,13 @@
     width: 100%;
     height: 100%;
     padding: 0px;
+}
+
+.text-box{
+    position: absolute;
+    transform: translate(-50%, -50%);
+    border-radius: 50%;
+    text-align: center;
 }
 
 .vertex {
@@ -25,15 +57,6 @@
 }
 .vertex:hover{
     transform: translate(-50%, -50%) scale(1.1);
-}
-
-.rotate{
-    display: inline-block;
-    transition: transform 0.5s;
-}
-
-.rotate:hover{
-    transform: scale(1.1) rotate(360deg);
 }
 
 
@@ -53,38 +76,20 @@
     background-image:url(./spock.png);
 }
 
-
-
-.nav{
-    display: flex;
-    justify-content: center;
-    gap: 50px;
-}
-
-.text-box{
-    position: absolute;
-    transform: translate(-50%, -50%);
-    border-radius: 50%;
-    text-align: center;
-}
+/*footer*/
 
 .footer{
     text-align: center;
     margin-bottom:50px;
 }
 
-.help{
-    margin-right:100px;
+.rotate{
+    display: inline-block;
+    transition: transform 0.5s;
 }
 
-.new-game{
-    margin-left:100px;
-}
-
-.header{
-    text-align: center;
-    margin-top:20px;
-    margin-bottom: 20px;
+.rotate:hover{
+    transform: scale(1.1) rotate(360deg);
 }
 
 a{
