--- a/index.css
+++ b/index.css
@@ -97,7 +97,7 @@
 
 a{
     text-decoration: none;
-    transition: transform 0.3s ease-out;
+    transition: transform 0.3s ease;
     display: inline-block;
 }
 
