--- a/index.css
+++ b/index.css
@@ -5,14 +5,14 @@
     text-align: center;
     margin-top: 20px;
     margin-bottom: 20px;
-    font-size: 18px;
+    font-size: 2rem;
 }
 
 .nav{
     display: flex;
     justify-content: center;
     gap: 50px;
-    margin-top: 34px;
+    margin-top: 3rem;
 }
 
 .help{
@@ -28,9 +28,9 @@
 
 .pentagram {
     position: relative;
-    width: 300px;
-    height: 300px;
-    margin: 56px auto 55px auto;
+    width: 35rem;
+    height: 35rem;
+    margin: 7rem auto 7rem auto;
 }
 
 .pentagram svg {
@@ -44,19 +44,22 @@
     transform: translate(-50%, -50%);
     border-radius: 50%;
     text-align: center;
+    font-size: 2rem;
 }
 
 .vertex {
     position: absolute;
     transform: translate(-50%, -50%);
-    width: 100px;
-    height: 100px;
+    width: 10rem;
+    height: 10rem;
     border-radius: 50%;
     display: flex;
     align-items: center;
     justify-content: center;
     transform-origin: center;
     transition: transform 0.3s ease-in-out;
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 .vertex:hover{
     transform: translate(-50%, -50%) scale(1.1);
@@ -99,6 +102,7 @@ a{
     text-decoration: none;
     transition: transform 0.3s ease;
     display: inline-block;
+    font-size: 1.8rem;
 }
 
 a:hover{
