--- a/index.css
+++ b/index.css
@@ -3,8 +3,8 @@
 
 .header{
     text-align: center;
-    margin-top: 20px;
-    margin-bottom: 20px;
+    margin-top: 55vh;
+    margin-bottom: 55vh;
     font-size: 2rem;
 }
 
@@ -50,8 +50,8 @@
 .vertex {
     position: absolute;
     transform: translate(-50%, -50%);
-    width: 10rem;
-    height: 10rem;
+    width: 20vh;
+    height: 20vh;
     border-radius: 50%;
     display: flex;
     align-items: center;
