--- a/index.css
+++ b/index.css
@@ -28,8 +28,8 @@
 
 .pentagram {
     position: relative;
-    width: 35rem;
-    height: 35rem;
+    width: 55vh;
+    height: 55vh;
     margin: 4rem auto 4rem auto;
 }
 
